<resources>
    <string name="app_name">Workout Journal</string>
    <string name="title_home">Home</string>
    <string name="title_workout_blueprint">Workout Blueprints</string>
    <string name="title_notifications">Notifications</string>
    <string name="view_edit_exercises">Exercises</string>
    <string name="edit_button">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Are you sure you would like to delete this?</string>
    <string name="amount">Reps/Time:</string>
    <string name="weight">Weight:</string>
    <string name="timed">Timed</string>
    <string name="reps">Reps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
