<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_yellow_background">

    <EditText
        android:id="@+id/exerciseBlueprintName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/my_secondary_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exerciseBlueprintInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/info"
        android:inputType="textMultiLine"
        android:maxLength="75"
        android:textColor="@color/my_secondary_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/exerciseBlueprintName"
        app:layout_constraintTop_toBottomOf="@+id/exerciseBlueprintName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_button_style"
        android:text="@string/save"
        android:textColor="@color/my_secondary_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_button_style"
        android:text="@android:string/cancel"
        android:textColor="@color/my_secondary_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/repsRadioButton"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseBlueprintInfo">

        <RadioButton
            android:id="@+id/repsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textColor="@color/my_secondary_background_color"
            android:textColorLink="@color/my_secondary_background_color"
            android:buttonTint="@color/my_secondary_background_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/timedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/timed"
            android:textColor="@color/my_secondary_background_color"
            android:textColorHighlight="@color/my_secondary_background_color"
            android:textColorLink="@color/my_secondary_background_color"
            android:buttonTint="@color/my_secondary_background_color"
            android:textSize="20sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>